--- a/config.yaml
+++ b/config.yaml
@@ -33,6 +33,7 @@ CONTENT_LOSS_WEIGHT: 0.1      # content loss weight
 ADV_LOSS_WEIGHT1: 1           # edge model adversarial loss weight
 ADV_LOSS_WEIGHT2: 1           # SR model adversarial loss weight
 GAN_LOSS: hinge               # nsgan | lsgan | hinge
+MGE_LOSS_WEIGHT: 0.1          #mge loss weight
 
 SAVE_INTERVAL: 1000           # how many iterations to wait before saving model (0: never)
 SAMPLE_INTERVAL: 1000         # how many iterations to wait before sampling (0: never)
